1. Fix top-shelf width not consist on mobile mode 2. Reduce particles points number

--- a/css/developers.css
+++ b/css/developers.css
@@ -10498,7 +10498,7 @@ p.nobtm {
  */
 .top-shelf {
   width: 100%;
-  min-width: 1020px;
+  /*min-width: 1020px;*/
   position: relative;
   padding-top: 15px; }
   .top-shelf h1 {
